[package]
name = "keratin"
description = "A quick setup/quick development, embedded, modular database"
version = "0.1.0"
authors = ["Rodrigo Mauricio <rodrigomauricio@protonmail.com>"]
edition = "2018"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "0.14.1"
toml = "0.5.6"
serde = "*"
serde_derive = "*"
md5 = "0.7.0"
rand = "0.7.3"
