[package]
name = "keratin"
description = "A quick setup/quick development, embedded, modular database"
repository = "https://github.com/hellbound22/keratin"
version = "0.2.0"
authors = ["Rodrigo Mauricio <rodrigomauricio@protonmail.com>"]
edition = "2018"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "1.1.0"
toml = "0.5.6"
serde = "1.0.116"
serde_derive = "1.0.56"
md5 = "0.7.0"
rand = "0.7.3"
serde_json = "*"